--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
