--- a/FoodDelivery/FoodDelivery.csproj
+++ b/FoodDelivery/FoodDelivery.csproj
@@ -22,7 +22,13 @@
 
   <ItemGroup>
     <Folder Include="Views\Cart\" />
-    <Folder Include="wwwroot\images\FoodItems\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\svg\cart.svg" />
+    <None Include="wwwroot\svg\price.svg" />
+    <None Include="wwwroot\svg\timeToReady.svg" />
+    <None Include="wwwroot\svg\weight.svg" />
   </ItemGroup>
 
 </Project>
