--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -10,4 +10,5 @@
   },
   "AllowedHosts": "*"
 }
+    //"DefaultConnection": "Data Source=fooddelivery.database.windows.net;Initial Catalog=FoodDB;User ID=adminer;Password=Yandriy16;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=test_1;Trusted_Connection=True;MultipleActiveResultSets=true"
